--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next_skillup",
+  "name": "spharos5th-skillup-fe",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,6 +14,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.427.0",
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
